--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body{
+  background:linear-gradient(120deg,rgb(255, 255, 255),#191414) ;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 1000px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App {
+  font-family: sans-serif;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+
+}
+h1{
+  font-size: 80px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.calc{
+max-width: 400px;
+border-radius: 60px;
+}
+
+.result{
+height: 60px;
+background-color: rgb(53, 53, 53);
+width: 100%;
+color: rgb(238, 203, 8);
+}
+
+.result p {
+  font-size: 40px;
+  padding: 10px;
+  
+}
+
+.buttons{
+display: block;
+background-color: #bbb;
+border-radius: 30px;
+}
+
+.buttons button{
+height: 60px;
+width: 25%;
+font-size: 30px;
+border: 2px solid white;
 }
